phase2_Dev/src/objects/Standard_Inspection_Item__c.object
<CustomObject>
    <description>The Standard Visit Items object manages data for each Provider Type&apos;s standard visit checklist</description>
    <fields>
        <fullName>Applicable_To__c</fullName>
        <description>Type of provider this inspection item applies to</description>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Care Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Care</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Provide information related to the category of inspection items that could be used later to organize inspection items during a visit</description>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Children Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRC Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care of Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum and Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipments and Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Child Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Home Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster/Adoptive Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Children Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General records/logs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health/Medications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infection Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mealtime, Food, Food Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel Records</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the items to inspect</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_SVI_ID__c</fullName>
        <externalId>true</externalId>
        <label>External SVI ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance__c</fullName>
        <label>Guidance</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if it&apos;s considered as High Risk. It will be reported as such in Reports and Dashboards.</inlineHelpText>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StdVisitItemRandomDomainName__c</fullName>
        <label>StdVisitItemRandomDomainName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdVisitItemRandom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to flag Random/Non-Random on Visit Tool</description>
        <label>StdVisitItemRandom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StdVisitItemReg__c</fullName>
        <description>the value in this field is used to create visit item regs on the stdvisitItem.</description>
        <label>StdVisitItemReg</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StdVisitItemTool__c</fullName>
        <description>Used to tag the standard visit Item to a Visit Tool</description>
        <label>StdVisitItemTool</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Standard Visit Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Agencies</fullName>
        <booleanFilter>2 OR 1</booleanFilter>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Foster Care Agency</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Adoption Agency</value>
        </filters>
        <label>All Agencies (foster care, adoption)</label>
    </listViews>
    <listViews>
        <fullName>All_FCC</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Applicable_To__c</columns>
        <columns>Guidance__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Family Child Care</value>
        </filters>
        <label>All FCC</label>
    </listViews>
    <listViews>
        <fullName>All_R_P</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Foster Care Agency</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Temporary Shelter</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Group Care</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Adoption Agency</value>
        </filters>
        <label>All R&amp;P</label>
    </listViews>
    <listViews>
        <fullName>All_Temp_Shelter_Foster_Care</fullName>
        <booleanFilter>2 OR 1</booleanFilter>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Applicable_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Temporary Shelter</value>
        </filters>
        <filters>
            <field>Applicable_To__c</field>
            <operation>includes</operation>
            <value>Group Care</value>
        </filters>
        <label>All Temporary Shelter / Group Care</label>
    </listViews>
    <listViews>
        <fullName>Edited_Today</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Applicable_To__c</columns>
        <columns>High_Risk__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>StdVisitItemRandom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StdVisitItemRandom__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Edited Today</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Visit Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>